# jupyter_splitview_redirect

./: .gitignore  README.md  pyproject.toml
