[tool.poetry]
name = "jupyter-splitview"
version = "0.1.2"
description = "Redirect to jupyter_compare_view"
authors = ["kolibril13 <44469195+kolibril13@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-compare-view = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
